# ComfyUI_MaraScott_Nodes

./: .gitignore  .gitmodules  FUNDING.yml  LICENSE  MaraScott_Nodes.py  Marasit_Nodes.py  README.md  __build__.py  __init__.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: README.md
docs/benchmark/Competitor/: _MaraScott_Generator_SDXL-input.json  benchmark_all_upscalers.json
docs/wf/: McBoaty_v4.json
docs/wf/ForLoop_v1/: ForLoop_v1_single.json  ForLoop_v1_single_with_subloop.json
docs/wf/McBoaty_v4/: McBoaty_v4.json
docs/wf/McBoaty_v5/: McBoaty_v5.json
docs/wf/McBoaty_v6/: McBoaty_v6.json  McBoaty_v6_FLUX.1-dev.json  McBoaty_v6_FLUX.1-dev_Simple.json  McBoaty_v6_SD1.5.json  McBoaty_v6_SD3.5.json  McBoaty_v6_SDXL.json
docs/wf/McInpainting_v2/: McInpainty_v2.json
docs/wf/Mcinpainting+McBoaty_v3/: McInpainting+McBoaty_v3.json
issues/: workflow.json
py/inc/: nodes.py  web.py
py/inc/lib/: array.py  cache.py  image.py  llm.py  mask.py  sampler.py  upscaler_refiner.py
py/inc/profiles/: any.py  default.py  pipe_detailer.py  textConcatenate.py  universal.py
py/nodes/: AnyBusNode.py  BusNode.py  BusPipeNode.py  Bus_node.py  DisplayInfoNode.py  KSamplerNode.py  PipeNodeBasic.py  PipeNodeDetailer.py  UniversalBusNode.py  UpscalerGridNode.py  UpscalerRefinerNode.py  bus.py
py/nodes/AnyBus/: Bus_v2.py  Bus_v3.py
py/nodes/Bus/: AnyBus_v2.py  AnyBus_v3.py
py/nodes/Dev/: DashBoard_v1.py
py/nodes/Image/: LoadImageByUrlOrPath_v1.py  LoadImage_v1.py
py/nodes/Info/: DisplayInfoNode_v1.py  DisplayInfo_v2.py  NSFWDetector_v1.py
py/nodes/Inpainting/: InpaintingTileByMask_v1.py
py/nodes/Loop/: ForLoop_v1.py  (+1 more)
py/utils/: api.py  constants.py  helper.py  log.py  math.py  path.py  version.py
web/docs/: NSFWDetector_v1.md
web_src/: package-lock.json  package.json  vite.config.js
(+101 files in other folders)
